--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <h4 style="font-size: 22px; text-transform: uppercase; text-align: center; color: white; line-height: 5px; padding:5px;">Contact</h4>
         <div class="follow">
             <center>
-              <a href="#" style="text-decoration: none;" class="fa fa-linkedin"></a>
+              <a href="https://www.linkedin.com/in/amrutamkulkarni/" style="text-decoration: none;" class="fa fa-linkedin"></a>
               <a href="#" style="text-decoration: none;"  class="fa fa-envelope"></a>
               <a href="#" style="text-decoration: none;"  class="fa fa-phone"></a>
           </center>
